<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.bitleet.myapplication.SignupActivity">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/image"
        android:layout_width="182dp"
        android:layout_height="167dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/missionicon"
        android:contentDescription="@string/bitleetimg" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,RtlCompat"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:targetApi="jelly_bean" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/em_il"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:targetApi="jelly_bean" />



            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:targetApi="jelly_bean" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/Pa5sw0rd"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent"
                tools:targetApi="jelly_bean" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Check_box"/>

            <Button
                android:id="@+id/buttonSignup"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/loginButton"
                android:contentDescription="@string/signupbutton"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />




            <Button
                android:id="@+id/buttonGoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>




        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="185dp"
            android:visibility="gone" />




    </RelativeLayout>

</RelativeLayout>