<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="358dp"
        android:layout_height="217dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="182dp"
            android:layout_height="167dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/missionicon"
            android:contentDescription="@string/bitleetimg" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:background="@color/colorPrimary"
>

        <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/em_il"
                android:clickable="true"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/Pa5sw0rd"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" tools:targetApi="jelly_bean" />


            <Button
                android:id="@+id/buttonLogin"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/loginButton"
                android:contentDescription="@string/loginbutton"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>